--- a/Book Discovery/BookDetail/Views/BookDetailsTableViewCell.xib
+++ b/Book Discovery/BookDetail/Views/BookDetailsTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BookDetailsTableViewCell" rowHeight="327" id="KGk-i7-Jjw" customClass="BookDetailsTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="412" height="309"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BookDetailsTableViewCell" rowHeight="365" id="KGk-i7-Jjw" customClass="BookDetailsTableViewCell" customModule="Book_Discovery" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="412" height="347"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="412" height="309"/>
+                <rect key="frame" x="0.0" y="0.0" width="412" height="347"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="IwY-iT-fbD">
-                        <rect key="frame" x="16" y="0.0" width="380" height="287.66666666666669"/>
+                        <rect key="frame" x="16" y="0.0" width="380" height="329.66666666666669"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oez-HV-vBX">
                                 <rect key="frame" x="0.0" y="3.3333333333333286" width="380" height="144"/>
@@ -58,6 +58,16 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Oh-zA-J9e">
+                                <rect key="frame" x="0.0" y="295.66666666666669" width="380" height="34"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <state key="normal" title="Info">
+                                    <color key="titleColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="showBookInfo:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bay-vx-Jcf"/>
+                                </connections>
+                            </button>
                         </subviews>
                     </stackView>
                 </subviews>
@@ -72,12 +82,13 @@
             <connections>
                 <outlet property="artwork" destination="oez-HV-vBX" id="uWq-OJ-UA2"/>
                 <outlet property="authorLabel" destination="UqD-fh-fSc" id="7PB-6b-eiK"/>
+                <outlet property="bookInfoButton" destination="3Oh-zA-J9e" id="9bQ-n8-83q"/>
                 <outlet property="genresLabel" destination="AaH-F3-XAR" id="rAK-8A-qw8"/>
                 <outlet property="pagesLabel" destination="Mry-1t-Ge9" id="h1h-6T-pim"/>
                 <outlet property="publisherLabel" destination="Qqx-bO-hw3" id="P6G-AF-l2J"/>
                 <outlet property="titleLabel" destination="beN-An-fIL" id="vPF-V6-TDg"/>
             </connections>
-            <point key="canvasLocation" x="200" y="-65.047393364928908"/>
+            <point key="canvasLocation" x="200" y="-51.540284360189574"/>
         </tableViewCell>
     </objects>
     <resources>
