--- a/Page Wire/BookDetail/Views/BookDetailsTableViewCell.xib
+++ b/Page Wire/BookDetail/Views/BookDetailsTableViewCell.xib
@@ -11,56 +11,57 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BookDetailsTableViewCell" rowHeight="419" id="KGk-i7-Jjw" customClass="BookDetailsTableViewCell" customModule="Page_Wire" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="412" height="401"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="BookDetailsTableViewCell" rowHeight="529" id="KGk-i7-Jjw" customClass="BookDetailsTableViewCell" customModule="Page_Wire" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="412" height="511"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="412" height="401"/>
+                <rect key="frame" x="0.0" y="0.0" width="412" height="511"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="IwY-iT-fbD">
-                        <rect key="frame" x="16" y="0.0" width="380" height="368.66666666666669"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oez-HV-vBX">
+                        <rect key="frame" x="131" y="3" width="150" height="194"/>
+                        <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="200" id="qIf-DP-U5W"/>
+                            <constraint firstAttribute="width" constant="150" id="yCL-El-SOc"/>
+                        </constraints>
+                        <imageReference key="image" image="book.fill" catalog="system" symbolScale="small"/>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="IwY-iT-fbD">
+                        <rect key="frame" x="16" y="216.00000000000003" width="380" height="258.66666666666674"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oez-HV-vBX">
-                                <rect key="frame" x="0.0" y="3" width="380" height="144"/>
-                                <color key="tintColor" red="0.57874745130000005" green="0.32151988149999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="qIf-DP-U5W"/>
-                                </constraints>
-                                <imageReference key="image" image="book.fill" catalog="system" symbolScale="small"/>
-                            </imageView>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beN-An-fIL">
-                                <rect key="frame" x="0.0" y="158" width="380" height="24"/>
+                                <rect key="frame" x="0.0" y="0.0" width="380" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UqD-fh-fSc">
-                                <rect key="frame" x="0.0" y="190" width="380" height="21.666666666666657"/>
+                                <rect key="frame" x="0.0" y="40" width="380" height="21.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AaH-F3-XAR" userLabel="Book Genres">
-                                <rect key="frame" x="0.0" y="219.66666666666666" width="380" height="17"/>
+                                <rect key="frame" x="0.0" y="77.666666666666686" width="380" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pages" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mry-1t-Ge9" userLabel="Pages Label">
-                                <rect key="frame" x="0.0" y="244.66666666666666" width="380" height="16.999999999999972"/>
+                                <rect key="frame" x="0.0" y="110.66666666666669" width="380" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Publisher" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qqx-bO-hw3">
-                                <rect key="frame" x="0.0" y="269.66666666666669" width="380" height="18"/>
+                                <rect key="frame" x="0.0" y="143.66666666666669" width="380" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="klM-Un-hTw">
-                                <rect key="frame" x="0.0" y="295.66666666666669" width="380" height="31"/>
+                                <rect key="frame" x="0.0" y="177.66666666666669" width="380" height="31"/>
                                 <color key="tintColor" red="0.0" green="0.61913639948918253" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" imagePlacement="trailing" title="Select Publisher" imagePadding="4">
@@ -71,7 +72,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Oh-zA-J9e">
-                                <rect key="frame" x="0.0" y="334.66666666666669" width="380" height="34"/>
+                                <rect key="frame" x="0.0" y="224.66666666666669" width="380" height="34"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" title="Info">
                                     <color key="titleColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -84,9 +85,11 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="IwY-iT-fbD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Abb-0z-Epx"/>
+                    <constraint firstItem="oez-HV-vBX" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="1UZ-v4-hdA"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="IwY-iT-fbD" secondAttribute="bottom" constant="16" id="gtJ-J9-rrO"/>
+                    <constraint firstItem="IwY-iT-fbD" firstAttribute="top" secondItem="oez-HV-vBX" secondAttribute="bottom" constant="16" id="ist-4N-I0Q"/>
                     <constraint firstAttribute="trailing" secondItem="IwY-iT-fbD" secondAttribute="trailing" constant="16" id="k24-ke-5Xn"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="IwY-iT-fbD" secondAttribute="bottom" constant="16" id="kfR-nY-Qf7"/>
+                    <constraint firstItem="oez-HV-vBX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="nfK-UT-ZcL"/>
                     <constraint firstItem="IwY-iT-fbD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="uQJ-XV-RGM"/>
                 </constraints>
             </tableViewCellContentView>
@@ -101,7 +104,7 @@
                 <outlet property="selectPublisherButton" destination="klM-Un-hTw" id="QlO-lV-o0x"/>
                 <outlet property="titleLabel" destination="beN-An-fIL" id="vPF-V6-TDg"/>
             </connections>
-            <point key="canvasLocation" x="200" y="-32.345971563981038"/>
+            <point key="canvasLocation" x="201.53846153846152" y="-0.35545023696682465"/>
         </tableViewCell>
     </objects>
     <resources>
