--- a/Page Wire/BookResults/Views/BookResultsTableViewCell.xib
+++ b/Page Wire/BookResults/Views/BookResultsTableViewCell.xib
@@ -24,50 +24,37 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="46b-Xt-TFA">
-                        <rect key="frame" x="89" y="20" width="199" height="101"/>
+                        <rect key="frame" x="89" y="20" width="221" height="101"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oRU-4i-NdS">
-                                <rect key="frame" x="0.0" y="0.0" width="199" height="50.666666666666664"/>
+                                <rect key="frame" x="0.0" y="0.0" width="221" height="50.666666666666664"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzm-9y-3Pa">
-                                <rect key="frame" x="0.0" y="50.666666666666671" width="199" height="50.333333333333329"/>
+                                <rect key="frame" x="0.0" y="50.666666666666671" width="221" height="50.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6kR-Ge-tqs" userLabel="Favorite Button">
-                        <rect key="frame" x="296" y="57.666666666666657" width="30" height="27"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="30" id="5lM-gp-rvB"/>
-                            <constraint firstAttribute="height" constant="30" id="tce-gl-tcl"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                        <color key="tintColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <state key="normal" backgroundImage="heart" catalog="system"/>
-                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="46b-Xt-TFA" firstAttribute="leading" secondItem="VMv-aq-eeq" secondAttribute="trailing" constant="16" id="56a-GI-Inz"/>
                     <constraint firstItem="46b-Xt-TFA" firstAttribute="centerY" secondItem="VMv-aq-eeq" secondAttribute="centerY" id="8jU-Te-itK"/>
                     <constraint firstItem="46b-Xt-TFA" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="20" id="Poe-np-PtH"/>
-                    <constraint firstAttribute="trailing" secondItem="6kR-Ge-tqs" secondAttribute="trailing" constant="8" id="Qib-Vk-px5"/>
                     <constraint firstAttribute="bottom" secondItem="VMv-aq-eeq" secondAttribute="bottom" constant="16" id="UU9-Ki-svg"/>
+                    <constraint firstAttribute="trailing" secondItem="46b-Xt-TFA" secondAttribute="trailing" constant="24" id="bvc-hE-kuV"/>
                     <constraint firstAttribute="bottom" secondItem="46b-Xt-TFA" secondAttribute="bottom" constant="16" id="glG-8J-OLz"/>
-                    <constraint firstItem="6kR-Ge-tqs" firstAttribute="leading" secondItem="46b-Xt-TFA" secondAttribute="trailing" constant="8" id="qYm-EM-ZFF"/>
                     <constraint firstItem="VMv-aq-eeq" firstAttribute="top" secondItem="I6t-qC-jb4" secondAttribute="top" constant="20" id="tKm-nn-uWn"/>
-                    <constraint firstItem="6kR-Ge-tqs" firstAttribute="centerY" secondItem="VMv-aq-eeq" secondAttribute="centerY" id="tdS-by-Aht"/>
                     <constraint firstItem="VMv-aq-eeq" firstAttribute="leading" secondItem="I6t-qC-jb4" secondAttribute="leading" constant="8" id="zMS-Wq-Nce"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="artwork" destination="VMv-aq-eeq" id="XDa-Yp-jtp"/>
                 <outlet property="authorLabel" destination="nzm-9y-3Pa" id="zch-M9-RV7"/>
-                <outlet property="favoriteButton" destination="6kR-Ge-tqs" id="gEO-jx-5Au"/>
                 <outlet property="titleLabel" destination="oRU-4i-NdS" id="dF4-bv-elN"/>
             </connections>
             <point key="canvasLocation" x="147.69230769230768" y="26.658767772511847"/>
@@ -75,6 +62,5 @@
     </objects>
     <resources>
         <image name="book.fill" catalog="system" width="128" height="95"/>
-        <image name="heart" catalog="system" width="128" height="109"/>
     </resources>
 </document>
